Completed DoctorCard component and fixed layout issues

--- a/src/Components/InstantConsultationBooking/InstantConsultation.css
+++ b/src/Components/InstantConsultationBooking/InstantConsultation.css
@@ -23,7 +23,7 @@
 }
 
 .search-results-container>h2 {
-    text-align: left;
+    text-align: center;
     font-size: 24px;
     font-weight: 700;
 }
